# MonoChat

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  start.sh
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  themes.js
client/src/components/: ChatContainer.js  InputArea.js  MessageItem.js  MessageList.js  Settings.js
client/src/contexts/: ChatContext.js  SettingsContext.js
client/src/services/: api.js
client/src/styles/: App.css  ChatContainer.css  InputArea.css  MessageItem.css  MessageList.css  Settings.css  index.css
src/: __init__.py
src/api/: __init__.py  main.py
src/datatype/: chat.py  common.py
src/example/: llm_demo.py
src/llm/: __init__.py  silicon_flow.py
src/utils/: secret_holder.py
