[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monochat"
version = "0.1.0"
description = "大模型流式对话应用"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
